<resources>
    <string name="app_name">Waikiki</string>
    <string name="txt_page1">Accumulated</string>
    <string name="txt_page2">InputData</string>
    <string name="txt_page3">Contacts</string>
    <string name="text_but_photo">Camera</string>
    <!--<string name="text_edit_mnu_contakt">EditContaсt</string>
    <string name="text_edit_mnu_content">EditData</string>-->
    <string name="topic_name_txt">Topic name</string>
    <string name="topic_comment_txt">Topic comment</string>
    <string name="but_save_txt">Save</string>
    <string name="but_delete_txt">Delete</string>
    <string name="but_exit_txt">Exit</string>
    <string name="text_edit_topic">Edit Current Topic</string>
    <string name="text_new_topic">New Topic</string>
    <string name="as_favorite">Set as Favorite</string>
    <string name="to_archive">Send to Archive</string>
    <!--<string name="to_new_topic">To create a new topic, click +</string>
    <string name="to_new_contakt">To create a new contaсt, click +</string>
    <string name="to_new_content">To add a new content, click +</string>-->
    <string name="active_topic">Active Topics</string>
    <string name="archive_topic">Archive</string>
    <string name="txt_delete_topic">Are you sure you want to remove the current theme from the list?</string>
    <string name="txt_delete_contakt">Are you sure you want to remove the current contact from the list?</string>
    <string name="txt_delete_content">Are you sure you want to remove the current information from the list?</string>
    <string name="txt_delete_photo">Delete current photo?</string>
    <string name="but_yes_txt">Yes</string>
    <string name="but_no_txt">No</string>
    <string name="but_close_txt">Close Info</string>
    <string name="contact_comment_txt">Contact comment</string>
    <string name="contact_phone_txt">Contact phone</string>
    <string name="contact_name_txt">Contact name</string>
    <string name="text_edit_contakt">Edit current Contact</string>
    <string name="text_new_contakt">New Contact</string>
    <string name="text_select_content">Select the Type of Content to Add</string>
    <string name="content_text">Add Text</string>
    <string name="content_photo">Add Photo</string>
    <string name="content_video">Add Video</string>
    <string name="content_sound">Add Sound</string>
    <string name="text_edit_content">Edit Content</string>
    <string name="text_new_content">New Content</string>
    <string name="content_comment_txt">Info comment</string>
    <string name="content_text_txt">Info text</string>
    <string name="text_explanation_permision">Without the appropriate permission, the application will not be able to create and use its own content.</string>
    <string name="text_permission_request">Permission Request</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string name="my_full_gallery">My full Gallery</string>
    <string name="current_gallery">Сurrent Gallery</string>
</resources>