<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCollapsed"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textOperName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bottom_round"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textTopicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/topic_name_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textTopicComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/topic_comment_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topicComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rwIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="none">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rwColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="none">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:showText="false"
                android:text="@string/as_favorite"
                app:useMaterialThemeColors="false" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <Button
                    android:id="@+id/butsave"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_save_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/butdelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_delete_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/butsave"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/butexit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_exit_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/butsave"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>