<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fitsSystemWindows="false"
        app:layout_scrollFlags="scroll|enterAlways">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/appbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/imageAppBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/waikiki" />

            <TextView
                android:id="@+id/textApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="10dp"
                android:autoText="false"
                android:elegantTextHeight="false"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/favirite"
                android:textSize="20sp"
                android:textStyle="bold" />


        </com.google.android.material.appbar.MaterialToolbar>


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appbar"
            android:backgroundTint="@color/appbar"
            android:backgroundTintMode="src_in">

            <View
                android:id="@+id/dividerApp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <!--app:layout_scrollFlags="scroll|enterAlways">-->

                <Button
                    android:id="@+id/button1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_page1"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_page2"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_page3"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/color_back_activity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.fragment.app.FragmentContainerView>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="#63174163"
        app:fabAlignmentMode="end"
        app:hideOnScroll="false"/>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/add" />

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:srcCompat="@drawable/waikiki" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



