<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCollapsed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textOperName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bottom_round"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/content_text_txt"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/back_txt"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPhotoView"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rwPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textContentComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/content_comment_txt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/content_text"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_add_button"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/add"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/content_photo"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_add_button"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/camera"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonMyGallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/ic_photo"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonMainGallery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/favor"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/content_video"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_add_button"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/add"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/content_sound"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ActionButtonSound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left_add_button"
                android:layout_marginTop="@dimen/margin_add_button"
                android:layout_marginBottom="@dimen/margin_add_button"
                android:clickable="true"
                android:src="@drawable/add"
                app:backgroundTint="@color/content"
                app:fabSize="mini" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/butsave"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_save_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/butdelete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_delete_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/butsave"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:id="@+id/butexit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/but_exit_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/butsave"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>